# share-api-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MCP.md  README.md  pyproject.toml  start.bat
src/share_api_mcp/: api_client.py  mcp_server.py  models.py  test_connection.py
src/share_api_mcp/config/: settings.py
tests/: test_api_client.py  test_mcp_server.py  test_models.py
tools/: fetch_entry.bat  test_connection.bat  tests.bat
